scss/_patterns/_widgets.scss
// Show supplementary information to a user without leaving the page. Fills screen on mobile, centered with overlay on tablet/desktop.
// - [data-modal-close]: set to "true" to include a close button on the modal, or "skip" to delegate a skip form action
// - [data-modal-skip-form]: selector for a skip `form` element to submit upon clicking the "skip" link
//
// Styleguide 4.4.1 - Modal (Popup)

.modal {
  display: none;
  position: fixed;
  top: 0; right: 0; bottom: 0; left: 0;
  background: rgba(0, 0, 0, 0.5);
  overflow: auto;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
  z-index: 9998;

  .modal-content {
    position: relative;
    background: #fff;
    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
    width: auto;
    padding: 2rem 1.5rem;
    margin: 0;
    word-wrap: break-word;
    z-index: 1050;

    @include media($tablet) {
      max-width: 600px;
      min-height: 0;
      margin: 5rem auto;
    }

    .modal-close-button {
      @include close-parent;
      color: #aaa;

      &.-alt {
        font-size: 1rem;
        top: 1.35rem;

        &:hover {
          text-decoration: underline;
        }
      }
    }

    h2 {
      margin-bottom: 1rem;

      &.banner {
        // fit this guy to edge of modal
        margin: -2rem -1.5rem 1rem;
      }
    }

    // Ensure modal images do not break out of their
    // parent containers on mobile
    img {
      width: 100%;
      height: auto;
    }
  }
}

body.modal-open {
  overflow: hidden;
}

